--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#about">
+            <a class="nav-link smooth" href="#about">
               Про нас
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="#portfolio">Наші роботи</a>
+            <a class="nav-link smooth" href="#portfolio">Наші роботи</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="mailto:#"><i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <a class="nav-link" href="mailto:metkomish@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>
             Замовити</a>
           </li>
         </ul>
@@ -64,9 +64,9 @@
       <div class="col-sm-4">
         <h2 class="mt-4" id="address">Як нас знайти?</h2>
         <address>
-          <strong>при зустрічі м. Львів</strong>
+          <strong>при зустрічі у м. Львів</strong>
           <br>
-          відправка Новою Поштою по УкраЇні
+          відправка Новою Поштою по Україні
           <br>
         </address>
         <address>
@@ -74,9 +74,9 @@
             <i class="fa fa-phone-square" aria-hidden="true">  +38 098 488 8558</i>
           </a>
           <br>
-          <a href="mailto:#">
+          <a href="mailto:metkomish@gmail.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
-            name@example.com
+            metkomish@gmail.com
           </a>
         </address>
       </div>
@@ -187,5 +187,6 @@
   <script src="https://use.fontawesome.com/28b6f16a9b.js"></script>
   <script src="js/collapse-navbar.js"></script>
   <script src="js/loader.js"></script>
+  <script src="js/smooth-collapse.js"></script>
 </body>
 </html>
