--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-danger">
     <div class="container">
-      <a class="navbar-brand" href="#">ПП "Малювала Ольга"</a>
+      <a class="navbar-brand" href="#">" Мама Малювала"</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,7 +57,7 @@
         <p>Незважаючи на широкий асортимент ялинкових іграшок, і всіляких тематичних товарів широкого вжитку, які у великій кількості з'являються на прилавках будь-якого супермаркету в період передноворічних розпродажів, саморобні святкові новорічні вироби з фанери і раніше не втрачають своєї актуальності, оскільки мають певні позитивні сторони.</p>
         <p>
           1. На відміну від однотипних і в більшості своїй, позбавлених смаку товарів серійного виробництва, оригінальні прикраси власного виготовлення є унікальними. Наприклад, казковий новорічний олень з фанери своїми руками, або інші вироби, які виконуються в одиничному екземплярі, мають неповторний дизайн і автентичний зовнішній вигляд;<br>
-          2. Для виконання роботи можна використовувати будь обрізки дерев'яних фанерних листів або непотрібні залишки тонких пиломатеріалів, тому кінцева ціна такого виробу буде значно нижче, ніж купленого в магазині;<br>3. Фанерні саморобки можна виготовити будь-яких розмірів, до того ж вони не ламаються і не б'ються, тому їх можна використовувати для прикраси вуличної ялинки у дворі власного будинку, або в громадських місцях, наприклад, на корпоративному святі або дитячому ранку.
+          2. Для виконання роботи можна використовувати обрізки дерев'яних фанерних листів або непотрібні залишки тонких пиломатеріалів, тому кінцева ціна такого виробу буде значно нижче, ніж купленого в магазині;<br>3. Фанерні саморобки можна виготовити будь-яких розмірів, до того ж вони не ламаються і не б'ються, тому їх можна використовувати для прикраси вуличної ялинки у дворі власного будинку, або в громадських місцях, наприклад, на корпоративному святі або дитячому ранку.
         </p>
       </div>
       <div class="col-sm-4">
@@ -177,7 +177,7 @@
   </a>
   <footer class="py-3 bg-danger">
     <div class="container">
-      <p class="m-0 text-center text-white">ПП "Малювала Ольга"</p>
+      <p class="m-0 text-center text-white">" Мама Малювала"</p>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous "></script>
