--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-danger">
     <div class="container">
-      <a class="navbar-brand" href="#">" Мама Малювала"</a>
+      <a class="navbar-brand" href="#">"Мама Малювала"</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -163,6 +163,60 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/010.jpg" alt="Літачок">
+          <div class="card-body">
+            <h4 class="card-title">"Літачок"</h4>
+            <p class="card-text">Ціна: 40грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/011.jpg" alt="Джип">
+          <div class="card-body">
+            <h4 class="card-title">"Джип"</h4>
+            <p class="card-text">Ціна: 100грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/012.jpg" alt="Літак">
+          <div class="card-body">
+            <h4 class="card-title">"Літак"</h4>
+            <p class="card-text">Ціна: 65грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/013.jpg" alt="Грузовик">
+          <div class="card-body">
+            <h4 class="card-title">"Грузовик"</h4>
+            <p class="card-text">Ціна: 120грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/014.jpg" alt="Лінійка">
+          <div class="card-body">
+            <h4 class="card-title">"Лінійка"</h4>
+            <p class="card-text">Ціна: 20грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/015.jpg" alt="Вертоліт">
+          <div class="card-body">
+            <h4 class="card-title">"Вертоліт"</h4>
+            <p class="card-text">Ціна: 65грн. шт.</p>
+          </div>
+        </div>
+      </div>
     </div>
     <h2 class="text-center">***Ще є багато інших. Дзвоніть!***</h2>
   </div>
@@ -177,7 +231,7 @@
   </a>
   <footer class="py-3 bg-danger">
     <div class="container">
-      <p class="m-0 text-center text-white">" Мама Малювала"</p>
+      <p class="m-0 text-center text-white">"Мама Малювала"</p>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous "></script>
