--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <div class="card">
           <img class="card-img-top" src="img/014.jpg" alt="Лінійка">
           <div class="card-body">
-            <h4 class="card-title">"Лінійка"</h4>
-            <p class="card-text">Ціна: 20грн. шт.</p>
+            <h4 class="card-title">"Лінійка" (будь-яке ім'я)</h4>
+            <p class="card-text">Ціна: 25грн. шт.</p>
           </div>
         </div>
       </div>
