--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-danger">
     <div class="container">
-      <a class="navbar-brand" href="#">"Мама Малювала"</a>
+      <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Еко іграшки"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -217,6 +217,33 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/016.jpg" alt="Прикраси на ялинку">
+          <div class="card-body">
+            <h4 class="card-title">"Прикраси на ялинку"</h4>
+            <p class="card-text">Ціна: 15грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/017.jpg" alt="Карта України">
+          <div class="card-body">
+            <h4 class="card-title">Карта "України" (будь-яке ім'я)</h4>
+            <p class="card-text">Ціна: 80грн. шт.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 my-4">
+        <div class="card">
+          <img class="card-img-top" src="img/018.jpg" alt="Прикраси на ялинку">
+          <div class="card-body">
+            <h4 class="card-title">"Прикраси на ялинку"</h4>
+            <p class="card-text">Ціна: 12грн. шт.</p>
+          </div>
+        </div>
+      </div>
     </div>
     <h2 class="text-center">***Ще є багато інших. Дзвоніть!***</h2>
   </div>
@@ -231,7 +258,7 @@
   </a>
   <footer class="py-3 bg-danger">
     <div class="container">
-      <p class="m-0 text-center text-white">"Мама Малювала"</p>
+      <p class="m-0 text-center text-white"><img src="img/logo.png" alt="Еко іграшки"></p>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js " integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous "></script>
