--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="card">
           <img class="card-img-top" src="img/017.jpg" alt="Карта України">
           <div class="card-body">
-            <h4 class="card-title">Карта "України" (будь-яке ім'я)</h4>
+            <h4 class="card-title">Карта "України"</h4>
             <p class="card-text">Ціна: 80грн. шт.</p>
           </div>
         </div>
