--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Новорічні іграшки">
+  <meta name="description" content="Новорічні іграшки з фанери. Фанерні саморобки можна виготовити будь-яких розмірів, до того ж вони не ламаються і не б'ються, тому їх можна використовувати для прикраси вуличної ялинки у дворі власного будинку, або в громадських місцях, наприклад, на корпоративному святі або дитячому ранку.">
   <meta name="author" content="Batsyk Volodymyr">
   <title>Новорічні іграшки з фанери</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -230,7 +230,7 @@
         <div class="card">
           <img class="card-img-top" src="img/017.jpg" alt="Карта України">
           <div class="card-body">
-            <h4 class="card-title">Карта "України"</h4>
+            <h4 class="card-title">Пазли - Карта "України"</h4>
             <p class="card-text">Ціна: 80грн. шт.</p>
           </div>
         </div>
